tests/ui/parser/issues/issue-84148-1.stderr
error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/issue-84148-1.rs:1:15
   |
LL | fn f(t:for<>t?)
   |               ^ expected one of `->`, `where`, or `{`

error: aborting due to 1 previous error

