tests/ui/parser/issues/issue-84148-1.rs
fn f(t:for<>t?)
//~^ ERROR: expected one of
// Note: `t?` is now parsed as Option<t> in type position
